--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.label {
+  font-size: 14px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 12px;
+  top: 12px;
+  padding: 0 5px 0 5px;
+  transition: 0.3s ease all;
+  background-color: white;
+  z-index: 1;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.animate-label {
+  top: -10px;
+  left: 12px;
+  font-size: 14px;
+  z-index: 1;
+}
+.wrapper-fields {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  position: relative;
+  max-width: 100%;
 }
